Automated rollback of commit 4c91240f69bc4982c5c3908087dfccdbcb93e5aa.
*** Reason for rollback ***

Breaks test/protobuf.msan [failure]([]

*** Original change description ***

Internal change

PiperOrigin-RevId: 745520292